--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-JWT_SECRET_KEY=TimeSmith?GetSomeHelp!
+DEPLOYMENT_ENV=local
+
+JWT_SECRET_KEY=CVWO2025?GetSomeHelp!
+SECURE_COOKIE=false
+
 BASE_URL=http://localhost:8080
 BASE_API=/api/v1
 BASE_API_URL=http://localhost:8080/api/v1
